# visual-aid

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release.yml
docs/: agent-workflow.md  architecture.md  backlog.md  dogfooding.md  installation.md  product.md  usage.md
docs/decisions/: 0001-markdown-first-agent-workflow.md  0002-initial-mcp-contract-and-payload-envelope.md  0003-initial-scaffold-stack-and-layout.md  0004-initial-file-based-session-bridge.md  0005-documentation-integrated-testing.md  0006-initial-format-aware-renderers.md  0007-npm-start-canonical-dogfood-entrypoint.md  0008-session-history-and-item-replacement.md  0009-rendered-mermaid-diagrams.md  0010-last-known-good-session-restore.md  0011-isolated-html-fragments.md  0012-push-based-session-bridge.md  0013-project-owned-format-expansion.md  0014-single-window-workspace-tabs.md  0015-richer-markdown-rendering.md  0016-json-payload-renderer.md  0017-github-release-distribution.md  0018-source-checkout-cross-workspace-testing.md  0019-process-cwd-workspace-resolution.md  0020-normalized-workspace-registry.md  0021-client-roots-workspace-resolution.md  0022-tool-cwd-workspace-resolution.md  (+13 more)
mcp/: launch.ts  payload.ts  server-info.ts  server.ts  session.ts  workspace.ts
scripts/: demo-payload.ts  release.ts  start.ts  version.ts
src/: bridge.ts  main.ts  mermaid.ts  render.ts  styles.css  ui.ts  view-model.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+28 files in other folders)
